Add args restrictions on user creation
Restrictions for: password and email
